# portfolio

./: README
mime-gen/: ChangeLog  README  build.sh  environs  message-gen.c  message.cmp  message.mg  message.multipart.cmp  message.multipart.mg  message.nested.headers.cmp  message.nested.headers.mg  run.sh  tests.sh  text0.txt  text1.txt  text2.txt  text3.txt  text4.txt
ntl/: AUTHORS  CMakeLists.txt  README  build.sh  run_tests.sh
ntl/src/include/: ntl_types.h  ntlc.h  ntll.h
ntl/src/lib/ntlc/: CMakeLists.txt  ntl_net.c  ntl_net.h  ntl_util.c  ntlc.c
ntl/src/lib/ntll/: CMakeLists.txt  ntl_decode.c  ntl_format.c  ntl_listener.c
ntl/tests/: CMakeLists.txt  cmockery_all.h  decode_tests.c  decode_tests.h  main.c  trace_tests.c  trace_tests.h
